--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,18 +2,17 @@ monitor=,preferred,auto,auto
 
 exec = notify-send "Hyprland config reloaded"
 
-exec-once = wpaperd & brave & kitty bash -c 'tmux new -s scratch || tmux a' & mako 
-exec-once = eww daemon && eww open bar
+exec-once = wpaperd & vieb -enable-features=UseOzonePlatform --ozone-platform=wayland & kitty bash -c 'tmux new -s scratch || tmux a' & mako 
+exec-once = eww open bar
 exec-once = xhost +SI:localuser:root
+exec-once = hyprland-per-window-xkblayout
 # Some default env vars.
 env = XCURSOR_SIZE,10
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us,ru
     kb_variant =
     kb_model =
-    kb_options = grp:alt_shift_toggle
     kb_rules =
 
     follow_mouse = 1
@@ -24,6 +23,12 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+}
+
+# device:at-translated-set-2-keyboard {
+device:josefadamcik-sofle {
+    kb_layout = us,ru
+    kb_options = grp:alt_shift_toggle
 }
 
 general {
@@ -102,7 +107,7 @@ device:epic-mouse-v1 {
     sensitivity = -0.5
 }
 
-windowrule = workspace 1,^(brave-browser)$
+windowrule = workspace 1,title:^(Vieb.*)$
 windowrule = workspace 10 silent, title:(.*is sharing your screen.)
 windowrule = workspace 2, ^(kitty)$
 windowrule = workspace 3, ^(slack)$
@@ -134,7 +139,7 @@ $shiftMod = SUPER SHIFT
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, kitty bash -c 'tmux new -s scratch || tmux a'
 bind = $mainMod, M, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bind = $mainMod, B, exec, brave
+bind = $mainMod, B, exec, vieb -enable-features=UseOzonePlatform --ozone-platform=wayland
 bind = $mainMod, Q, killactive, 
 bind = $shiftMod, Q, exit, 
 bind = $mainMod, E, exec, kitty nvim
